[package]
name = "emb-dsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ['use_std']
use_std = ['itertools']

[dependencies]
num-traits = "0.2.15"
itertools = { version = "0.10.3", optional = true }

[dev-dependencies]
approx = "0.5.1"
dasp = { version = "0.11.0", features = ["signal"] }
gnuplot = "0.0.37"
itertools = "0.10.3"
