[package]
name = "sci-rs"
version = "0.2.8"
edition = "2021"
authors = ["Jacob Trueb <jtrueb@northwestern.edu>"]
description = "Rust library behind sciprs like scipy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/qsib-cbie/sci-rs.git"
homepage = "https://qsib-cbie.github.io/sci-rs"
readme = "../README.md"
keywords = ["scipy", "sciprs", "python", "filter", "dsp"]
categories = ["science"]


[package.metadata.docs.rs]
all-features = true

[features]
default = ['use_std']
use_std = ['nalgebra/std', 'nalgebra/macros', 'rustfft']
plot = ['gnuplot']

[dependencies]
num-traits = "0.2.15"
itertools = { version = "0.11.0", default-features = false }
nalgebra = { version = "0.32.2", default-features = false }
ndarray = { version = "0.15.6", default-features = false }
gnuplot = { version = "0.0.37", optional = true }
rustfft = { version = "6.1.0", features = ["neon"], optional = true }

[dev-dependencies]
approx = "0.5.1"
dasp_signal = { version = "0.11.0" }
criterion = { version = "0.4", features = ["html_reports"] }
rand = "0.8.4"
# dhat = "0.3.0"

[[bench]]
name = "sosfilt"
harness = false

[[bench]]
name = "sosfiltfilt"
harness = false
