[package]
name = "sci-rs"
version = "0.3.3"
edition = "2021"
authors = ["Jacob Trueb <jtrueb@northwestern.edu>"]
description = "Rust scientific analysis library similar to SciPy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/qsib-cbie/sci-rs.git"
homepage = "https://github.com/qsib-cbie/sci-rs.git"
readme = "../README.md"
keywords = ["scipy", "dsp", "signal", "filter", "design"]
categories = ["science", "mathematics", "no-std", "embedded"]


[package.metadata.docs.rs]
all-features = true

[features]
default = ['alloc']
alloc = ['nalgebra/alloc', 'nalgebra/libm', 'kalmanfilt/alloc']
std = ['nalgebra/std', 'nalgebra/macros', 'rustfft', 'alloc']

[dependencies]
num-traits = { version = "0.2.15", default-features = false }
itertools = { version = "0.11.0", default-features = false }
nalgebra = { version = "0.32.2", default-features = false }
ndarray = { version = "0.15.6", default-features = false }
lstsq = { version = "0.5.0", default-features = false }
rustfft = { version = "6.1.0", features = ["neon"], optional = true }
kalmanfilt = { version = "0.2.2", default-features = false }
gaussfilt = { version = "0.1.3", default-features = false }

[dev-dependencies]
approx = "0.5.1"
dasp_signal = { version = "0.11.0" }
criterion = { version = "0.4", features = ["html_reports"] }
rand = "0.8.4"

[[bench]]
name = "sosfilt"
harness = false

[[bench]]
name = "sosfiltfilt"
harness = false
